--- a/Visualization/index.html
+++ b/Visualization/index.html
@@ -8,9 +8,12 @@
     </head>
     <body>
         <div id=map></div>
+        <script src="connectServer.js"></script>
+        <script src="getPM.js"></script>
         <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGwWZK_bbs0Q4fdGToSaVaymJbKz9bWWg&libraries=drawing,places,geometry&callback=initMap"
         async defer></script>
         <script src="initMap.js"></script>
+   
     </body>
 </html>
